plugins {
    id 'java'
}

group = 'de.fynn'
version = '4.0.1'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'
}

tasks.withType(JavaCompile).configureEach {
    options.warnings = false
}

jar {
    archiveBaseName.set('Serverhost')
    archiveVersion.set(version)
}
